<resources>
    <string name="app_name">Calorie Counter</string>
    <string-array name="exercise_answers">
        <item>Little to no exercise</item>
        <item>Light exercise (1–3 days per week)</item>
        <item>Moderate exercise (3–5 days per week)</item>
        <item>Heavy exercise (6–7 days per week)</item>
        <item>Very heavy exercise (twice per day, extra heavy workouts)</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="enter_your_height">Enter your height</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="breakfast">Breakfast</string>
    <string name="summary">Summary</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="food_search">Food search</string>
    <string name="dish">Dish</string>
    <string name="enter_portion_size">Enter portion size</string>
    <string name="enter_portion_size_g">Enter portion size (g)</string>
    <string name="add_food">ADD FOOD</string>
    <string name="_100">100</string>
    <string name="how_often_do_you_exercise">How often do you exercise?</string>
</resources>
